--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener('keydown', (e) => {
+    const audioElm = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
 
+    if(audioElm) {
+      // Rewind the audio for it to respond to ever key press and interrupt current note
+      audioElm.currentTime = 0;
+      audioElm.play();
+    } 
+    if(key) key.classList.add("playing")
+
+  })
+  
+  const keys = document.querySelectorAll('.key')
+  keys.forEach(key => { key.addEventListener('transitionend', removeTransition) })
+
+  function removeTransition(e) {
+    e.target.classList.remove('playing')
+  }
 </script>
 
 
