--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,11 +62,39 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0, 2.26, 0.49, 1.01)
     }
 
   </style>
 
   <script>
+
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+    function updateDate() {
+      const date = new Date();
+
+      const seconds = date.getSeconds();
+      const minutes = date.getMinutes();
+      const hours = date.getHours();
+
+      const secondsDeg = ((seconds / 60) * 360) + 90;
+      const minDeg = ((minutes / 60) * 360) + 90;
+      const hourDeg = ((hours / 12) * 360) + 90;
+      
+
+
+      secondHand.style.transform = `rotate(${secondsDeg}deg)`
+      minHand.style.transform = `rotate(${minDeg}deg)`
+      hourHand.style.tranform = `rotate(${hourDeg}deg)`
+    }
+
+    setInterval(updateDate, 1000)
 
 
   </script>
